[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motor-driver"
version = "0.0.2"
authors = [
  { name="Dhiren Wijesinghe", email="dhirenw1@gmail.com" },
]
description = "iCL series motor driver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "minimalmodbus"
]

